[project]
name = "pychd"
version = "0.2.0"
description = "The ChatGPT-powered decompiler for Python, providing superior code analysis capabilities"
readme = "README.md"
authors = [
    { name = "卍diohabara卍", email = "diohabara@users.noreply.github.com" }
]
dependencies = [
    "openai>=1.35.3",
    "xdis>=6.1.0",
    "pre-commit>=3.7.1",
]
requires-python = ">= 3.12"

[project.scripts]
openai = "pychd.cli:main"

[tool.rye]
managed = true
# version pins are in requirements-dev.lock
dev-dependencies = [
    "pyright>=1.1.359",
    "mypy",
    "respx",
    "pytest",
    "ruff",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ychd"]
