[project]
name = "pychd"
version = "0.2.4"
description = "The ChatGPT-powered decompiler for Python, providing superior code analysis capabilities"
readme = "README.md"
authors = [
    { name = "卍diohabara卍", email = "diohabara@users.noreply.github.com" }
]
dependencies = [
    "litellm>=1.30.0",
    "xdis>=6.1.0",
]
requires-python = ">= 3.14"

[project.scripts]
openai = "pychd.cli:main"

[dependency-groups]
dev = [
    "pyrefly",
    "respx",
    "pytest",
    "ruff",
    "prek",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyrefly]
python_version = "3.14"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ychd"]
