[project]
name = "pychd"
version = "1.0.0"
description = "LLM-powered Python bytecode decompiler supporting multiple providers via litellm"
readme = "README.md"
authors = [
    { name = "卍diohabara卍", email = "diohabara@users.noreply.github.com" }
]
dependencies = [
    "litellm>=1.30.0",
    "xdis>=6.1.0",
]
requires-python = ">= 3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pychd = "pychd.main:main"

[dependency-groups]
dev = [
    "pyrefly",
    "respx",
    "pytest",
    "ruff",
    "prek",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyrefly]
python_version = "3.14"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pychd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
